= Unreleased =
# Fixed
- Moved HTML block from page head to body

# Updated
- Omniva API library to 1.3.4
- TCPDF library to 6.10.0

= 2.3.1 =
# Fixed
- Fixed a bug by changing the DB prefix to dynamic in the shipment data retrieval function

= 2.3.0 =
# Improved
- changed the "Send return code" parameter type to switcher, made disabled by default and indicated that this service may be charged additionally
- migrated to the full OMX API structure
- added new shipping method: Express Letter

# Updated
- API library to 1.3.3
- Box Calculator library to 1.1.0

= 2.2.5 =
# Improved
- Added display of selected parcel terminal on order confirmation and order prereview pages
- New variables added to emails:
    {omniva_terminal_name} - show Omniva terminal name and address
    {omniva_terminal_text} - show title "Omniva parcel terminal:" and Omniva terminal name and address

= 2.2.4 =
# Fixed
- Fixed agent ID

= 2.2.3 =
# Fixed
- Changed to use regular courier services for Estonian clients
- It has been made so that the VAT number is not required for the registration of the shipment to the company

# Improved
- Added use of address 2 field value
- Added compatibility with the SuperCheckout by Knowband module

= 2.2.2 =
# Fixed
- Fixed registration of shipments when the shipment is delivered by a courier

# Improved
- Added a default shipping country parameter to the module settings, which allows to load Omniva shipping methods on the Cart and Checkout pages before a shipping address has been entered
- Added platform and version identification to all requests to the Omniva server
- Added Box Calculator library
- Changed to calculate shipment dimensions using the Box Calculator library

# Updated
- API library to 1.3.2

= 2.2.1 =
# Fixed
- Fixed "Omniva orders" page error, when international carriers had never been created before
- Removed the use of the str_contains function, since this function only appeared in PHP 8.0

# Updated
- API library to 1.3.1

= 2.2.0 =
# Fixed