@@ -2,5 +2,5 @@
 
 function upgrade_module_2_3_0($module)
 {
-    $module->registerHook('displayCarrierExtraContent');
+    return $module->registerHook('displayCarrierExtraContent');
 }
