@@ -1,0 +1,6 @@
+<?php
+
+function upgrade_module_2_3_2($module)
+{
+    return $module->registerHook('displayTop');
+}
