@@ -1,6 +1,7 @@
-= Unreleased =
+= Unreleased (2.3.2) =
 # Fixed
 - Moved HTML block from page head to body
+- Fixed module upgrade functions
 
 # Updated
 - Omniva API library to 1.3.4
